MangaDownloader.Desktopのnamespaceを全て調整

--- a/MangaDownloader.Desktop/Views/Windows/MainWindow.axaml
+++ b/MangaDownloader.Desktop/Views/Windows/MainWindow.axaml
@@ -2,11 +2,11 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:views="clr-namespace:MangaDownloader.Views"
-		xmlns:vm="using:MangaDownloader.ViewModels"
+		xmlns:views="clr-namespace:MangaDownloader.Desktop.Views"
+		xmlns:vm="using:MangaDownloader.Desktop.ViewModels"
 		mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="500"
 		x:CompileBindings="True"
-		x:Class="MangaDownloader.Views.MainWindow"
+		x:Class="MangaDownloader.Desktop.Views.MainWindow"
 		x:DataType="vm:MainWindowViewModel"
 		x:Name="MainWindowWindow"
 		Icon="/Assets/avalonia-logo.ico"
