--- a/MangaDownloader.Desktop/App.axaml
+++ b/MangaDownloader.Desktop/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 x:Class="MangaDownloader.App"
-			 xmlns:local="using:MangaDownloader"
+			 x:Class="MangaDownloader.Desktop.App"
+			 xmlns:local="using:MangaDownloader.Desktop"
 			 RequestedThemeVariant="Default">
 	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
