--- a/MangaDownloader.Desktop/Views/UserControls/TaskManageView.axaml
+++ b/MangaDownloader.Desktop/Views/UserControls/TaskManageView.axaml
@@ -2,10 +2,10 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:views="clr-namespace:MangaDownloader.Views"
-			 xmlns:vm="using:MangaDownloader.ViewModels"
+			 xmlns:views="clr-namespace:MangaDownloader.Desktop.Views"
+			 xmlns:vm="using:MangaDownloader.Desktop.ViewModels"
 			 mc:Ignorable="d" d:DesignWidth="250" d:DesignHeight="500"
-			 x:Class="MangaDownloader.Views.TaskManageView"
+			 x:Class="MangaDownloader.Desktop.Views.TaskManageView"
 			 x:DataType="vm:TaskManageViewModel"
 			 >
 	<Border Padding="10">
