progressが表示されないバグを修正. MainWindowViewのProgressBarView配置時にDataContextをバインドしていなかったのが原因.

--- a/MangaDownloader.Desktop/Views/Windows/MainWindow.axaml
+++ b/MangaDownloader.Desktop/Views/Windows/MainWindow.axaml
@@ -33,7 +33,7 @@
 			</MenuItem>
 		</Menu>
 
-		<views:ProgressBarView DockPanel.Dock="Bottom" />
+		<views:ProgressBarView DockPanel.Dock="Bottom" DataContext="{Binding ProgressBarViewModel}" />
 
 		<Grid>
 			<Grid.ColumnDefinitions>
